HP interval changed

--- a/res/items/items_config.json
+++ b/res/items/items_config.json
@@ -318,6 +318,7 @@
         "effect_FV": 20,
         "drop_rate": 2.0,
         "fv_lock": 3,
+        "fv_reward": 4,
         "type": "consumable",
         "description": "馅料丰富的甜点。蜜糖本身入口即化，里面的坚果仿佛是被天鹅绒布包裹着的宝石一般，带来多层次的惊喜。浅尝一口，便已甜入心坎，整个人宛若泡在蜂蜜罐中畅游一般…下次，再做多几块吧！ ",
         "image": "枣椰蜜糖.png"
@@ -339,6 +340,7 @@
         "effect_FV": 35,
         "drop_rate": 1.0,
         "fv_lock": 4,
+        "fv_reward": 4,
         "type": "consumable",
         "description": "纳西妲的特色料理。据说玛兹在须弥有「智慧」的意思，如此精致玲珑的「智慧」，着实令人无法抗拒。纳西妲的眼里有着温柔的笑意：「海葵帮助并见证了鱼儿成长，鱼儿的小小馈赠也是理所应当的呀。」 ",
         "image": "哈瓦玛玛兹.png"
