--- a/res/items/items_config.json
+++ b/res/items/items_config.json
@@ -142,6 +142,17 @@
         "description": "细如龙须的面食。抻细的面如同飞流直下的瀑布，三千细丝坠入凝聚山珍精华的高汤之中。比寻常面食更为柔软缠绵的口感，让人根本不愿停下筷子。",
         "image": "龙须面.png"
     },
+    "鳗肉茶泡饭": {
+        "name": "鳗肉茶泡饭",
+        "effect_HP": 15,
+        "effect_FV": 10,
+        "drop_rate": 2.0,
+        "fv_lock": 2,
+        "fv_reward":5,
+        "type": "consumable",
+        "description": "清淡可口的主食。清茶与高汤混合出的香气静雅绵长，洁白的米饭颗粒分明，经过炭火洗礼的鳗肉则是软嫩细腻。交织于舌尖的鱼香与茶香，再加上清甜的米香，融合成一片曼妙滋味，大概没有人能够抵挡这样的三重诱惑吧。",
+        "image": "鳗肉茶泡饭.png"
+    },
     "蒙德土豆饼": {
         "name": "蒙德土豆饼",
         "effect_HP": 15,
@@ -336,6 +347,17 @@
         "type": "collection",
         "description": "最好的伙伴！",
         "image": "派蒙.png"
+    },
+    "真味茶泡饭": {
+        "name": "真味茶泡饭",
+        "effect_HP": 50,
+        "effect_FV": 35,
+        "drop_rate": 1.0,
+        "fv_lock": 4,
+        "fv_reward": 5,
+        "type": "consumable",
+        "description": "流浪者的特色料理。微苦的茶香与清甜的米饭浑然一体，吃上一口就停不下来。如此高超的厨艺，他是怎么做到的?似乎察觉到了你的内心想法，只见他脸色一沉:「 还等什么?吃完了就赶快去洗碗。」",
+        "image": "真味茶泡饭.png"
     },
     "哈瓦玛玛兹": {
         "name": "哈瓦玛玛兹",
